--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "kartik-v/yii2-tabs-x": "@dev",
         "kartik-v/yii2-bootstrap5-dropdown": "@dev",
-        "2amigos/yii2-chartjs-widget": "~2.0"
+        "2amigos/yii2-chartjs-widget": "~2.0",
+        "symfony/sendgrid-mailer": "^6.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
