--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "kartik-v/yii2-tabs-x": "@dev",
         "kartik-v/yii2-bootstrap5-dropdown": "@dev",
         "2amigos/yii2-chartjs-widget": "~2.0",
-        "symfony/sendgrid-mailer": "^6.3"
+        "symfony/sendgrid-mailer": "^6.3",
+        "kartik-v/yii2-widget-datepicker": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
