--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "kartik-v/yii2-bootstrap5-dropdown": "@dev",
         "2amigos/yii2-chartjs-widget": "~2.0",
         "symfony/sendgrid-mailer": "^6.3",
-        "kartik-v/yii2-widget-datepicker": "@dev"
+        "kartik-v/yii2-widget-datepicker": "@dev",
+        "kartik-v/yii2-grid": "dev-master",
+        "kartik-v/yii2-date-range": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
