--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/sendgrid-mailer": "^6.3",
         "kartik-v/yii2-widget-datepicker": "@dev",
         "kartik-v/yii2-grid": "dev-master",
-        "kartik-v/yii2-date-range": "@dev"
+        "kartik-v/yii2-date-range": "@dev",
+        "kartik-v/yii2-widget-select2": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
