--- a/config/vars.php.example
+++ b/config/vars.php.example
@@ -9,3 +9,7 @@ const DB_HOST = "127.0.0.1";
 const DB_NAME = "database name";
 const DB_USER = "root";
 const DB_PASS = "password";
+const APPLICATION_NAME = "SPGG TaskBoard";
+const APP_TIMEZONE = "EST";
+const COMPANY_NAME = "ShadowPoint.GG";
+const ADMIN_EMAIL = "admin@shadowpoint.gg";
